# picocom

./: .gitignore  AUTHORS  Android.mk  CMakeLists.txt  CONTRIBUTORS  ChangeLog  Makefile  Makefile.am  Makefile_gnu  README  README.md  bsd_notes.txt  build_ppcom.sh  configure.ac  picocom.c  toolchain_linux.aarch64.cmake
bash_completion/: picocom  ppcom
cmake/: toolchain_qnx.cmake  toolchain_windows.cmake
doc/: picocom.1  picocom.1.html  picocom.1.md  ppcom.1  ppcom.1.html  ppcom.1.md
docs/: lowerrts.md  ppcom.1.md
pcsc/: pcasc
someipSrv/client/: CMakeLists.txt  main.cpp
someipSrv/service/: CMakeLists.txt  InterCommunication_serviceimpl.cpp  InterCommunication_serviceimpl.hpp  Intercomm.cpp  Intercomm.h
someipSrv/soa_sdk/include/InterCommunication/: InterCommunication_common.hpp  InterCommunication_proxy.hpp  InterCommunication_skeleton.hpp
someipSrv/soa_sdk/soa_stack/include/APF/: ApfCustomCatchMatcher.h  EnhancedAssertion.h  MissionBase.h  Mission_Helper.h  NoOwnershipPtr.h  ScopeGuard.h  SerializableArguments.h  Serializer.h  StaticBuffFormat.h  StaticSStream.h  Synchronized.h  TableDriveTool.h  Timer.h  UtilityTools.h
someipSrv/soa_sdk/soa_stack/include/APF/OSA/: ApfMessage.h  ApfThread.h
someipSrv/soa_sdk/soa_stack/include/APF/ara/: ara_message.hpp  ara_runtime.hpp
someipSrv/soa_sdk/soa_stack/include/APF/ara/CommonAPI/: Deployable.hpp  Deployment.hpp  Enumeration.hpp  InputStream.hpp  OutputStream.hpp  Struct.hpp  Variant.hpp  Version.hpp
someipSrv/soa_sdk/soa_stack/include/APF/ara/com/: AddressTranslator.h  com_error_domain.h  instance_identifyer.h  internal.h  sample_ptr.h  types.h
someipSrv/soa_sdk/soa_stack/include/APF/ara/com/e2e/: e2e_types.h
someipSrv/soa_sdk/soa_stack/include/APF/ara/com/runtime/: runtime.h
someipSrv/soa_sdk/soa_stack/include/APF/ara/com/serialization/: Deployment.hpp  InputStream.hpp  OutputStream.hpp  SerializableArguments.hpp  StringEncoder.hpp
someipSrv/soa_sdk/soa_stack/include/APF/ara/core/: Helper.h  Try.h  array.h  error_code.h  error_domain.h  exception.h  future.h  future_back.h  future_error_domain.h  instance_specifier.h  map.h  optional.h  promise.h  result.h  result1.h  span.h  span.hpp  string.h  string_view.h  variant.h  vector.h
someipSrv/soa_sdk/soa_stack/include/APF/catch2/: catch_reporter_tap.hpp
someipSrv/soa_sdk/soa_stack/include/APF/ut/: FeatherMock.h
someipSrv/soa_sdk/soa_stack/include/RunTime/: CallBack.h  ServiceCallBack.h  Synchronized.h  ara_message.hpp  ara_runtime.hpp  ara_runtime_impl.hpp  byte.hpp  utility.h
someipSrv/soa_sdk/soa_stack/include/RunTime/phm/: UtilityTools.h  ipc_client_adapter_impl.h  ipc_client_adapter_interface.h  ipc_parameters.h  phm.h  phm_manager.h  phm_message.h  phm_serializer.h
someipSrv/soa_sdk/soa_stack/include/kt_someip/: AppMessage.hpp  AppSpecialMessage.hpp  Handler.hpp  MessageBase.hpp  ProcLifeCycle.hpp  json.hpp  types.hpp  utMock.hpp
someipSrv/soa_sdk/soa_stack/include/kt_someip/someipMessage/: someip_data_array.h  someip_data_bitfield.h  someip_data_common.h  someip_data_string.h  someip_data_structure.h  someip_data_union.h  someip_message.h  someip_tp.h
someipSrv/someiplib/: sc-someip-service.cli.json  sc-someip-service.json
someipSrv/someiplib/InterCommunication/: InterCommunication_common.cpp  InterCommunication_common.hpp  InterCommunication_proxy.cpp  InterCommunication_proxy.hpp  InterCommunication_skeleton.cpp  InterCommunication_skeleton.hpp
src/: CMakeLists.txt  Makefile.am  custbaud_bsd.c  custbaud_bsd.cpp  pcxm  pcym  pczm  picocom.c  ppcom.c  ppcom.cpp
src/include/: basic.h  debug.h  log_server.h
src/libffwd/: CMakeLists.txt  README.md
src/libffwd/include/: dbglog.h  epoll.h  fifodes.h  file_descriptor.h  msgpak.h  pipe.h  socket_client.h  socket_server.h
src/libffwd/src/: epoll.cpp  ffwd.cpp  ffwd_cli.cpp  fifodes.cpp  file_descriptor.cpp  msgpak.cpp  pipe.cpp  socket_client.cpp  socket_server.cpp
src/libprocmgr/: .gitignore  Android.mk  CMakeLists.txt
src/libprocmgr/include/: client_manager.h  messages_manager.h  misc_utils.h  netlink_event.h  network_filter.h  network_manager.h  network_utils.h  proc_config.h  process_manager.h  procmgr_basic.h  serv_config.h  service_manager.h  socket_server.h
src/libprocmgr/src/: messages_manager.cpp  misc_utils.cpp  netlink_event.cpp  network_filter.cpp  network_manager.cpp  network_utils.cpp  proc_config.cpp  process_manager.cpp  serv_config.cpp  service_manager.cpp  socket_server.cpp
src/libsrvmgr/: Makefile.am  Makefile_gnu  local_service.cpp  manager_service.cpp  messages_manager.cpp  misc_utils.cpp  netlink_event.cpp  network_filter.cpp  network_manager.cpp  process_manager.cpp  service_manager.cpp
src/libsrvmgr/include/: basic.h  local_service.h  manager_client.h  manager_service.h  messages_manager.h  misc_utils.h  netlink_event.h  network_filter.h  network_manager.h  network_utils.h  process_manager.h  service_manager.h
src/libsrvmgr/src/: local_service.cpp  misc_utils.cpp  network_utils.cpp  process_manager.cpp
src/ppcom/: CMakeLists.txt  Makefile  Makefile.am  Makefile_gnu  custbaud_bsd.cpp  log_server.cpp  ppcom.cpp  ppcom_cli.cpp
src/ppcom/include/: basic.h  config.h  ctrl_term.h  debug.h  log_server.h
src/ppcom/src/: ctrl_term.cpp  fdio.cpp  ffwd.cpp  ffwd.h  linenoise.cpp  log_server.cpp  ppcom.cpp  ppcom_cli.cpp
