cmake_minimum_required(VERSION 2.8)

project(ppcom_main)

set(CMAKE_CXX_STANDARD 14)
set(VERSION 1.0.0)

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib;$ORIGIN/../soa_lib")
set(CMAKE_BUILD_RPATH "$ORIGIN/../lib;$ORIGIN/../soa_lib")

add_subdirectory(src)

# install(TARGETS ${PROJECT_NAME}
#         RUNTIME DESTINATION bin
#         LIBRARY DESTINATION lib
#         ARCHIVE DESTINATION lib
#         INCLUDES DESTINATION include
#         MANIFEST DESTINATION share
#         RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
#         LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
#         ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
#         INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/include
# )


